# radicalpair-tensornetwork

./: .gitignore  .nojekyll  Manifest.toml  Project.toml  README.md  main.html  pyproject.toml
anisotropy/: crypto-aiso-onepair.py  crypto-aiso-twopairs-dnp.py  crypto-aiso-twopairs.py  plot-dnp.ipynb  plot-theta.ipynb  spin_trajectory_FAD.eps  spin_trajectory_TrpC.eps  spin_trajectory_TrpD.eps
anisotropy/coordinate/: FAD-A.spindens.cube  FAD-TrpC-TrpD.xyz  FAD-w-H.xyz  FAD-wo-H.xyz  TrpC-A.spindens.cube  TrpC-dihedral-A.out  TrpC-opt-dihedral.xyz  TrpC-opt-rotated.xyz  TrpC-rotated-A.inp  TrpC-rotated-A.out  TrpC-w-H.xyz  TrpC-wb97xd-lab.json  TrpC-wo-H.xyz  TrpD-A.spindens.cube  TrpD-opt-dihedral.xyz  TrpD-opt-rotated.xyz  TrpD-rotated-A.inp  TrpD-rotated-A.out  TrpD-w-H.xyz  TrpD-wb97xd-lab.json  TrpD-wo-H.xyz  flavin-A.spindens.cube  flavin-opt-rotated-A.inp  flavin-opt-rotated-A.out  flavin-opt-rotated.xyz  flavin-opt.xyz  flavin-wb97xd-lab.json  geom-analysys.ipynb  pyproject.toml
benchmark/: input_SC.ini  lpmps.py  plot-benchmark.ipynb  plot-toymodel.ipynb  smps.py  symmetry_reduction.py  toy-pmps.py  tutorial.jl  utils.py  vmpdo.py
slides/: README.md  main.html  main.qmd
