[project]
name = "radicalpair-tensornetwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytdscf",
    "radicalpy",
]

[tool.uv.sources]
pytdscf = { git = "https://github.com/QCLovers/PyTDSCF.git", rev = "ac2c0a68ac9c166c5a44806fb42740975c4b38c9" }
radicalpy = { git = "https://github.com/Spin-Chemistry-Labs/radicalpy.git", rev = "d4729d61dd3417454b8ff2f512f2b1b56b731c15" }

[dependency-groups]
dev = [
    "jupyterlab>=4.5.2",
]
