[project]
name = "coordinate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.25.0",
    "matplotlib>=3.10.3",
    "nglview>=3.1.4",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "radicalpy",
]

[tool.uv.sources]
radicalpy = { git = "https://github.com/Spin-Chemistry-Labs/radicalpy.git", rev = "7aa3de2fcaffe88274f98f7f2797c0ca140a7241" }
